// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<styled.div>
  <styled.div>
    <Styled(styled.div)>
      <styled.img
        alt="photo"
        src="/images/products/img.jpg"
      />
    </Styled(styled.div)>
    <styled.div>
      <styled.div>
        Nivea
      </styled.div>
      <styled.div>
        Test product!
      </styled.div>
      <styled.div>
        <styled.div>
          15 ml
        </styled.div>
        <Price
          price="15 zł"
        />
      </styled.div>
      <Styled(styled.div)>
        <styled.div>
          Produkt dostępny
        </styled.div>
        <styled.div>
          Dostawa gratis od 99 zł
        </styled.div>
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      Opis Produktu
    </styled.div>
    Opis produktu
  </styled.div>
</styled.div>
`;

exports[`should render correctly with discount 1`] = `
<styled.div>
  <styled.div>
    <Styled(styled.div)>
      <styled.img
        alt="photo"
        src="/images/products/img.jpg"
      />
    </Styled(styled.div)>
    <styled.div>
      <styled.div>
        Nivea
      </styled.div>
      <styled.div>
        Test product!
      </styled.div>
      <styled.div>
        <styled.div>
          15 ml
        </styled.div>
        <Price
          hasDiscount={true}
          oldPrice="50 zł"
          price="15 zł"
        />
      </styled.div>
      <Styled(styled.div)>
        <styled.div>
          Produkt dostępny
        </styled.div>
        <styled.div>
          Dostawa gratis od 99 zł
        </styled.div>
      </Styled(styled.div)>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      Opis Produktu
    </styled.div>
    Opis produktu
  </styled.div>
</styled.div>
`;
